--- a/templates/default/zonefile.erb
+++ b/templates/default/zonefile.erb
@@ -12,14 +12,18 @@ $TTL <%= @global_ttl %>
                            IN    NS <%= ns %>
 <% end %>
 
+<% if @mail_exchange -%>
 <% @mail_exchange.each do |mx| -%>
                            IN    MX <%= mx['priority'] %> <%= mx['host'] %>
+<% end %>
 <% end %>
 
                            IN     A <%= node['ipaddress'] %>
 ns                         IN     A <%= node['ipaddress'] %>
 
+<% if @records -%>
 <% @records.each do |record| -%>
 <%= "%-20s %5s IN %5s %s" % [record['name'],record['ttl'],record['type'],record['ip']] %>
+<% end %>
 <% end %>
 
