--- a/templates/default/named.conf.options.erb
+++ b/templates/default/named.conf.options.erb
@@ -39,9 +39,9 @@ options {
        <% node[:bind9][:listen_on].each do |address| -%>
          <%= address %>;
        <% end %>
-       }
+       };
     <% else -%>
-       listen-on { any; }
+       listen-on { any; };
     <% end %>
     <% if node[:bind9][:enable_ipv6] %>
       listen-on-v6 { any; };
